// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ButtonControl /> snapshot should match snapshot 1`] = `
<ButtonControl
  control="close"
>
  <ButtonSimple
    className="md-button-control-wrapper"
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          className="md-button-control-wrapper md-button-simple-wrapper"
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <Icon
            autoScale={true}
            name="cancel"
            weight="bold"
          >
            <div
              aria-hidden="true"
              className="md-icon-wrapper md-icon-auto-scales md-icon-scales"
              role="img"
            >
              <svg
                aria-hidden="true"
                className=""
                data-autoscale={true}
                data-scale={false}
                data-test="cancel"
                fill="currentColor"
                height="100%"
                style={{}}
                viewBox="0, 0, 32, 32"
                width="100%"
              />
            </div>
          </Icon>
        </button>
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</ButtonControl>
`;

exports[`<ButtonControl /> snapshot should match snapshot with className 1`] = `
<ButtonControl
  className="example-class"
  control="close"
>
  <ButtonSimple
    className="md-button-control-wrapper example-class"
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          className="md-button-control-wrapper example-class md-button-simple-wrapper"
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <Icon
            autoScale={true}
            name="cancel"
            weight="bold"
          >
            <div
              aria-hidden="true"
              className="md-icon-wrapper md-icon-auto-scales md-icon-scales"
              role="img"
            >
              <svg
                aria-hidden="true"
                className=""
                data-autoscale={true}
                data-scale={false}
                data-test="cancel"
                fill="currentColor"
                height="100%"
                style={{}}
                viewBox="0, 0, 32, 32"
                width="100%"
              />
            </div>
          </Icon>
        </button>
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</ButtonControl>
`;

exports[`<ButtonControl /> snapshot should match snapshot with id 1`] = `
<ButtonControl
  control="close"
  id="example-id"
>
  <ButtonSimple
    className="md-button-control-wrapper"
    id="example-id"
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          className="md-button-control-wrapper md-button-simple-wrapper"
          id="example-id"
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <Icon
            autoScale={true}
            name="cancel"
            weight="bold"
          >
            <div
              aria-hidden="true"
              className="md-icon-wrapper md-icon-auto-scales md-icon-scales"
              role="img"
            >
              <svg
                aria-hidden="true"
                className=""
                data-autoscale={true}
                data-scale={false}
                data-test="cancel"
                fill="currentColor"
                height="100%"
                style={{}}
                viewBox="0, 0, 32, 32"
                width="100%"
              />
            </div>
          </Icon>
        </button>
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</ButtonControl>
`;

exports[`<ButtonControl /> snapshot should match snapshot with isCircular 1`] = `
<ButtonControl
  control="close"
  isCircular={true}
>
  <ButtonSimple
    className="md-button-control-wrapper"
    data-circular={true}
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          className="md-button-control-wrapper md-button-simple-wrapper"
          data-circular={true}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <Icon
            autoScale={true}
            name="cancel"
            weight="bold"
          >
            <div
              aria-hidden="true"
              className="md-icon-wrapper md-icon-auto-scales md-icon-scales"
              role="img"
            >
              <svg
                aria-hidden="true"
                className=""
                data-autoscale={true}
                data-scale={false}
                data-test="cancel"
                fill="currentColor"
                height="100%"
                style={{}}
                viewBox="0, 0, 32, 32"
                width="100%"
              />
            </div>
          </Icon>
        </button>
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</ButtonControl>
`;

exports[`<ButtonControl /> snapshot should match snapshot with isDisabled 1`] = `
<ButtonControl
  control="close"
  isDisabled={true}
>
  <ButtonSimple
    className="md-button-control-wrapper"
    data-disabled={true}
    isDisabled={true}
  >
    <FocusRing
      disabled={true}
    >
      <FocusRing
        disabled={true}
        focusClass="md-focus-ring-wrapper-disabled"
        focusRingClass="md-focus-ring-wrapper-disabled"
      >
        <button
          className="md-button-control-wrapper md-button-simple-wrapper"
          data-disabled={true}
          disabled={true}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <Icon
            autoScale={true}
            name="cancel"
            weight="bold"
          >
            <div
              aria-hidden="true"
              className="md-icon-wrapper md-icon-auto-scales md-icon-scales"
              role="img"
            >
              <svg
                aria-hidden="true"
                className=""
                data-autoscale={true}
                data-scale={false}
                data-test="cancel"
                fill="currentColor"
                height="100%"
                style={{}}
                viewBox="0, 0, 32, 32"
                width="100%"
              />
            </div>
          </Icon>
        </button>
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</ButtonControl>
`;

exports[`<ButtonControl /> snapshot should match snapshot with style 1`] = `
<ButtonControl
  control="close"
  style={
    {
      "color": "pink",
    }
  }
>
  <ButtonSimple
    className="md-button-control-wrapper"
    style={
      {
        "color": "pink",
      }
    }
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          className="md-button-control-wrapper md-button-simple-wrapper"
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          style={
            {
              "color": "pink",
            }
          }
          type="button"
        >
          <Icon
            autoScale={true}
            name="cancel"
            weight="bold"
          >
            <div
              aria-hidden="true"
              className="md-icon-wrapper md-icon-auto-scales md-icon-scales"
              role="img"
            >
              <svg
                aria-hidden="true"
                className=""
                data-autoscale={true}
                data-scale={false}
                data-test="cancel"
                fill="currentColor"
                height="100%"
                style={{}}
                viewBox="0, 0, 32, 32"
                width="100%"
              />
            </div>
          </Icon>
        </button>
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</ButtonControl>
`;
